fixes sifter scrolling issue on mobile

--- a/src/components/sifter/sifter.css
+++ b/src/components/sifter/sifter.css
@@ -56,7 +56,6 @@
     justify-content: flex-end;
   }
 
-
   &__controls {
     width: 100%;
     display: flex;
@@ -113,10 +112,13 @@
     }
   }
 
-
   /* journal nav gets moved from right margin to left margin on mobile */
   &__left-journal-nav {
     padding: var(--sgrd);
+    overflow-y: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    max-height: 100%;
+    box-sizing: border-box;
   }
 
   &__body {
@@ -150,5 +152,4 @@
       }
     }
   }
-
 }
